Tweaked the table spacing a bit and fixed content overflowing the global container

--- a/pages/app.scss
+++ b/pages/app.scss
@@ -16,6 +16,7 @@ body, a {
     width: 100%;
     height: 100%;
     backdrop-filter: invert(1);
+    overflow: auto;
 }
 
 #app {
