--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -49,7 +49,12 @@
             padding-right: 10px;
         }
         tr {
+            flex: 1;
             display: flex;
+            justify-content: space-around;
+            @media only screen and (max-width: 900px) {
+                display: block;
+            }
         }
     }
     .tfoot {
